@@ -20,6 +20,7 @@ documents those changes that are of interest to users and admins.
     slurmctld.
  -- Made sshare sort things the same way saccmgr list assoc does
     (alphabetically)
+ -- Fixed issue with default accounts being set up correctly.
 
 * Changes in SLURM 2.2.0.pre12
 ==============================
